--- a/MarkdownLog/MarkdownLog.csproj
+++ b/MarkdownLog/MarkdownLog.csproj
@@ -1,102 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
+  <PropertyGroup Label="Configuration">
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+  </PropertyGroup>
   <PropertyGroup>
-    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{58003E79-47E0-47D6-BF62-82051EFC1E8B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarkdownLog</RootNamespace>
-    <AssemblyName>MarkdownLog</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile24</TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>netstandard1.5</TargetFramework>
+    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyResourceLanguageAttribute>false</GenerateAssemblyResourceLanguageAttribute>
+    <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="GanttChartActivity.cs" />
-    <Compile Include="GanttChart.cs" />
-    <Compile Include="BarChart.cs" />
-    <Compile Include="BarChartDataPoint.cs" />
-    <Compile Include="BlockQuote.cs" />
-    <Compile Include="BulletedList.cs" />
-    <Compile Include="CodeBlock.cs" />
-    <Compile Include="ITableCell.cs" />
-    <Compile Include="EmptyTableCell.cs" />
-    <Compile Include="MarkdownDeep\Abbreviation.cs" />
-    <Compile Include="MarkdownDeep\Block.cs" />
-    <Compile Include="MarkdownDeep\BlockProcessor.cs" />
-    <Compile Include="MarkdownDeep\FootnoteReference.cs" />
-    <Compile Include="MarkdownDeep\HtmlTag.cs" />
-    <Compile Include="MarkdownDeep\LinkDefinition.cs" />
-    <Compile Include="MarkdownDeep\LinkInfo.cs" />
-    <Compile Include="MarkdownDeep\MardownDeep.cs" />
-    <Compile Include="MarkdownDeep\SpanFormatter.cs" />
-    <Compile Include="MarkdownDeep\StringScanner.cs" />
-    <Compile Include="MarkdownDeep\TableSpec.cs" />
-    <Compile Include="MarkdownDeep\Token.cs" />
-    <Compile Include="MarkdownDeep\Utils.cs" />
-    <Compile Include="MarkdownElement.cs" />
-    <Compile Include="MarkdownToHtmlConverter.cs" />
-    <Compile Include="MarkdownToHtmlExtensions.cs" />
-    <Compile Include="NumberExtensions.cs" />
-    <Compile Include="TableColumn.cs" />
-    <Compile Include="TableColumnAlignment.cs" />
-    <Compile Include="TableCell.cs" />
-    <Compile Include="TableCellRenderSpecification.cs" />
-    <Compile Include="TableOptions.cs" />
-    <Compile Include="TableRow.cs" />
-    <Compile Include="Header.cs" />
-    <Compile Include="HeaderBase.cs" />
-    <Compile Include="HorizontalRule.cs" />
-    <Compile Include="IIosTableViewCell.cs" />
-    <Compile Include="IIosTableViewHeaderCell.cs" />
-    <Compile Include="TableView.cs" />
-    <Compile Include="IosTableViewCell.cs" />
-    <Compile Include="TableViewCellAccessory.cs" />
-    <Compile Include="IosTableViewCheckmarkCell.cs" />
-    <Compile Include="IosTableViewHeaderCell.cs" />
-    <Compile Include="TableViewSection.cs" />
-    <Compile Include="ListBase.cs" />
-    <Compile Include="ListItem.cs" />
-    <Compile Include="MarkdownContainer.cs" />
-    <Compile Include="NumberedList.cs" />
-    <Compile Include="Paragraph.cs" />
-    <Compile Include="RawMarkdown.cs" />
-    <Compile Include="SubHeader.cs" />
-    <Compile Include="IMarkdownElement.cs" />
-    <Compile Include="MarkDownBuilderExtensions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="Table.cs" />
-    <Compile Include="ReflectionExtensions.cs" />
+    <Compile Include="**\*.cs" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Sdk" Version="1.0.0-alpha-20161104-2">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="NETStandard.Library" Version="1.6.1" />
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
